--- a/tut2/index.html
+++ b/tut2/index.html
@@ -25,10 +25,18 @@
 
 
 <section  id="dog">
-<p> stuff and such </p>
+<p> I love dogs </p>
 
 <section  id="ball">
-<p> stuff and such </p>
+<p> we ball</p>
+
+<label for="story">Tell us your story:</label>
+
+<textarea id="story" name="story" rows="5" cols="33">
+I got a headache at school what about you
+</textarea>
+
+
 
 
 </section>
