--- a/tut2/index.html
+++ b/tut2/index.html
@@ -36,7 +36,12 @@
 I got a headache at school what about you
 </textarea>
 
+<details>
+<summary>Open Me</summary>
+<p>boo</p>
 
+
+</details>
 
 
 </section>
