--- a/tut2/index.html
+++ b/tut2/index.html
@@ -39,7 +39,8 @@ I got a headache at school what about you
 <details>
 <summary>Open Me</summary>
 <p>boo</p>
-
+<label for="skills">web dev skills so far</label>
+<progress id="skills" value="20" max="100"></progress>
 
 </details>
 
