--- a/htmlanimation/index.html
+++ b/htmlanimation/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>animation</title>
+    <title>animation</title>
 </head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width,
+<meta charset="UTF-8">
+<meta name="viewport" content="width-device-width,
     initial-scale=1.0">
-    <link rel="stylesheet" href="HTMLANIMATION/styles.css">
+<link rel="stylesheet" href="htmlanimation/styles.css">
 
 <body>
-    <header class="title"><h1> make things move </h1>
+    <header class="title">
+        <h1> make things move </h1>
     </header>
     <main>
         <div class="square"></div>
+        <div class="button-div">
+            <a href="#" class="button">click here</a>
+
+        </div>
+
         <a href="#" class="button">click here</a>
 
+
     </main>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 
 </body>
+
 </html>
