--- a/project2timetrreavel/page3.html
+++ b/project2timetrreavel/page3.html
@@ -78,7 +78,7 @@
 
 <body>
   <div class="image-container">
-    <img src="images/lake4.jpg" alt="Lake Cunningham" class="lake-image">
+    <img src="images/mark2.png" alt="Lake Cunningham" class="lake-image">
     
    
     <div class="overlay-content">
