--- a/portfilio/page2.html
+++ b/portfilio/page2.html
@@ -61,7 +61,7 @@
      
 <div class="statement_text">
 <em>
-I like sharks, they are cool
+About
 </em>
 <br>
 
@@ -75,3 +75,13 @@ I like sharks, they are cool
      
 <!-- NOTE!: For each row section make sure your column divs add up to 12. so 4+8, 6+6, 2+10, etc.-->
 
+  </div>  
+ 
+My drive to create digital media comes from me wanting to add to the communities I'm in and to express my creativity. Growing up I watching many monster movies and dinosaur documentaries and always wanted to make my own. Along with that, I have also seen many characters from different series, and always wanted to animate them in my own way, whether its a causal scene or an action packed clip. Digital media helped me create all of that and I am glad that I know how to shoot movies, edit with different tools, and build my own sites and games thanks to the tools it offers. I feel very comfortable using any digital media tools to express myself and my creative thought processes as I want to make my projects the best they can be. I really enjoy 3d modeling, animating, film making, photography, and editing as my personal favorites. I feel that those mediums have the most potential for me to express myself and for me to create the media that I want to make. It is a goal of mine to get a career that involves all of those mediums and to be able to express my ideas. I always have fun making my own animations, 3d models, edits, and create them whenever I can. I personally hope that I can learn even more skills in the digital media field as I want to be able to work on large professional projects such as TV shows, movies and games in the future as a career.   
+
+
+
+
+
+
+</div>
